changed submit placeholder text and fixed it not displaying properly on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,17 +68,6 @@ h2 {
     border-radius: 4px;
 }
 
-.home-btn {
-    position: relative;
-    left: 46%;
-    bottom: 0.5%;
-    color: black;
-    background: #3336ff;
-    border-radius: 4px;
-    margin: 1%;
-    padding: 1%;
-}
-
 .btn:hover {
     cursor: pointer;
     transition: transform 100ms;
@@ -97,6 +86,9 @@ h2 {
 
 
 /*End Screen CSS */
+input {
+    text-align: center;
+}
 
 .end-form-container {
     width: 100%;
@@ -137,4 +129,17 @@ input::placeholder{
 .fa-home {
     margin-left: 1rem;
     color: black;
+}
+
+        /* Screen sizes */
+
+@media screen and (max-width: 1200px) {
+    .choice-container {
+        min-width: 50%;
+        
+    }
+    .hud-item{
+        text-align: center;
+        font-size: 1rem;
+    }
 }
